--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1>hello</h1>
+<h1>Internet Technology</h1>
+<h1>Kavindu Thiwanka</h1>
+<h1>GDSE 60</h1>
+<img src="assets/giphy.gif">
 </body>
 </html>
