--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <meta name="description" content="This is my Portfolio">
     <meta name="author" content="Kavindu Thiwanka">
     <meta name="owner" content="Kavindu Thiwanka">
+    <meta name="theme-color" content="black">
 </head>
 <header>
     <aside>
