--- a/assignments/css/case_01/case_01.html
+++ b/assignments/css/case_01/case_01.html
@@ -153,6 +153,10 @@
             border-top-right-radius: 100px;
         }
 
+        ::-webkit-scrollbar{
+            width: 0px;
+        }
+
 
     </style>
 </head>
@@ -197,6 +201,44 @@
     <div></div>
 
 </main>
+<main>
+    <section>
+        <div>
+            <div></div>
+        </div>
+    </section>
+    <section>
+        <div>
+            <div></div>
+        </div>
+    </section>
+    <section>
+        <div>
+            <div></div>
+        </div>
+    </section>
+    <section>
+        <div>
+            <div></div>
+        </div>
+    </section>
 
+    <!--Center box-->
+    <div>
+        <!--Center circle-->
+        <div></div>
+    </div>
+
+    <!--Half circles for edges-->
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+    <!--Middle circles in main-->
+    <div></div>
+    <div></div>
+
+</main>
 </body>
 </html>
