case_02 half done

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kavindu Thiwanka</title>
-<!--    <link rel="icon" href="">-->
+    <link rel="stylesheet" href="assets/css/normalize.css">
     <base href="localhost">
     <meta name="description" content="This is my Portfolio">
     <meta name="author" content="Kavindu Thiwanka">
