--- a/assignments/css/case_02/case_02.html
+++ b/assignments/css/case_02/case_02.html
@@ -41,10 +41,18 @@
             color: rgba(46, 41, 41, 0.96);
         }
 
+        body>main>aside:nth-child(1){
+            position: absolute;
+        }
+
         body>main>aside:nth-child(1)>div{
             background: rebeccapurple;
             height: 100vh;
             width: 30vw;
+            position: absolute;
+        }
+
+        body>main>aside:nth-child(2){
             position: absolute;
         }
 
@@ -54,6 +62,28 @@
             height: 100vh;
             width: 70vw;
             position: absolute;
+        }
+
+        body>main>aside:nth-child(2)>div>section:nth-child(1){
+            position: absolute;
+        }
+
+        body>main>aside:nth-child(2)>div>section:nth-child(1)>img:nth-child(1){
+            width: 30vw;
+            height: 20vh;
+            position: relative;
+        }
+
+        body>main>aside:nth-child(2)>div>section:nth-child(1)>img:nth-child(2){
+            /*width: 100px;*/
+            /*height: 50px;*/
+            position: relative;
+        }
+
+        body>main>aside:nth-child(2)>div>section:nth-child(1)>img:nth-child(3){
+            /*width: 100px;*/
+            /*height: 50px;*/
+            position: relative;
         }
 
         footer>div{
@@ -97,7 +127,16 @@
         </div>
     </aside>
     <aside>
-        <div></div>
+        <div>
+            <section>
+                <img src="assets/img/favicon.png" alt="Logo">
+                <img src="assets/img/favicon.png" alt="Logo">
+                <img src="assets/img/favicon.png" alt="Logo">
+            </section>
+            <article>
+                <p></p>
+            </article>
+        </div>
     </aside>
 </main>
 <footer>
