--- a/assignments/css/case_02/case_02.html
+++ b/assignments/css/case_02/case_02.html
@@ -14,13 +14,17 @@
 
         main {
             position: relative;
+            margin-top: 73px;
         }
 
         header{
             background: white;
             box-shadow: 0px -1px 8px 2px #1c1717e8;
-            position: relative;
+            position: fixed;
+            width: 100%;
             height: 73px;
+            z-index: 2;
+            top: 0;
         }
         header>img{
             width: 190px;
@@ -39,6 +43,10 @@
             padding: 10px;
             color: rgba(46, 41, 41, 0.96);
             font-family: Arial;
+        }
+
+        header>nav>ul>li:hover{
+            color: blue;
         }
 
         main>nav{
@@ -73,13 +81,23 @@
 
         main>nav>ul>li{
             display: block;
-            padding: 17px;
             color: white;
             font-family: Arial;
             font-size: 18px;
+            padding-bottom: 13px;
         }
-        main>nav>ul>li>i{
+
+        main>nav>ul>li>a{
+            color: white;
+            text-decoration: none;
+        }
+
+        main>nav>ul>li>a>i{
             padding: 10px;
+        }
+
+        main>nav>ul>li>a:hover{
+            color: red;
         }
 
         h1{
@@ -89,6 +107,7 @@
         p{
             font-family: Arial;
             font-size: 15px;
+            margin-bottom: 0;
         }
     </style>
 </head>
@@ -108,10 +127,10 @@
 <main>
     <nav>
         <ul>
-            <li><i class="fa-solid fa-house"></i> Home</li>
-            <li><i class="fa-solid fa-earth-americas"></i> Services</li>
-            <li><i class="fa-solid fa-headset"></i> Contact</li>
-            <li><i class="fa-solid fa-address-card"></i> About Us</li>
+            <li> <a href="https://www.ijse.lk" target="_blank"><i class="fa-solid fa-house"></i> Home</a></li>
+            <li><a href="#"><i class="fa-solid fa-earth-americas"></i> Services</a></li>
+            <li><a href="#"><i class="fa-solid fa-headset"></i> Contact</a> </li>
+            <li><a href="#"><i class="fa-solid fa-address-card"></i> About Us</a></li>
         </ul>
     </nav>
     <section>
