--- a/assignments/css/case_04/case_04.html
+++ b/assignments/css/case_04/case_04.html
@@ -4,122 +4,145 @@
   <meta charset="UTF-8">
   <title>Case 04</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
+  <meta name="viewport" content="width=device-width initial-scale=1">
   <style>
-
-    ::-webkit-scrollbar{
+    ::-webkit-scrollbar {
       width: 0px;
     }
 
-    main>section:nth-child(1){
-      height: 100vh;
-      width: 100vw;
+    main > section:first-child {
       position: relative;
+      width: 100vw;
+      height: 100vh;
     }
 
-    main>section:nth-child(1)>section{
-      position: sticky;
+    main > section:nth-child(2) {
+      position: relative;
       width: 100vw;
-      height: 8vh;
+      height: 100vh;
+      background-color: #57c2f9;
+      padding-bottom: 75px;
+    }
+
+    main > section:nth-child(3) {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      background-color: #847a7a;
+      padding-bottom: 80px;
+    }
+
+    main > section:nth-child(4) {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      background-color: #fb5454;
+    }
+
+    main > section:first-child > div {
+      border: 2px solid red;
+      position: sticky;
       background: red;
       top: 0;
     }
 
-    main>section:nth-child(2){
-      height: 100vh;
-      width: 100vw;
-      position: relative;
-      background:lightskyblue;
-    }
-
-    main>section:nth-child(2)>section{
-      position: sticky;
-      width: 100vw;
-      height: 8vh;
-      background: blue;
-      top: 0;
-    }
-
-    main>section:nth-child(3){
-      height: 100vh;
-      width: 100vw;
-      position: relative;
-      background: lightgray;
-    }
-
-    main>section:nth-child(3)>section{
-      position: sticky;
-      width: 100vw;
-      height: 8vh;
-      background: black;
-      top: 0;
-    }
-
-    main>section:nth-child(4){
-      height: 100vh;
-      width: 100vw;
-      position: relative;
-      background: red;
-    }
-
-    main>section:nth-child(4)>section{
-      position: sticky;
-      width: 100vw;
-      height: 8vh;
-      background: darkred;
-      top: 0;
-    }
-    h1{
-      font-size: 120px;
-      position: relative;
-      text-align: center;
-      top: 200px;
-    }
-
-    h4{
-      color: white;
+    main > section:first-child > div > h3 {
+      margin-left: 20px;
+      margin-top: 10px;
+      margin-bottom: 10px;
       font-size: 25px;
-      position: relative;
-      top: 20px;
-      left: 10px;
+      color: white;
     }
 
-  </style>
+    main > section:nth-child(2) > div {
+      border: 2px solid #081ad0;
+      position: sticky;
+      background: #081ad0;
+      top: 0;
+    }
 
+    main > section:nth-child(2) > div > h3 {
+      margin-left: 20px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 25px;
+      color: white;
+    }
+
+
+    main > section:nth-child(3) > div {
+      border: 2px solid #424252;
+      position: sticky;
+      background: #424252;
+      top: 0;
+    }
+
+    main > section:nth-child(3) > div > h3 {
+      margin-left: 20px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 25px;
+      color: white;
+    }
+
+    main > section:nth-child(4) > div {
+      border: 2px solid #612121a3;
+      position: sticky;
+      background: #612121a3;
+      top: 0;
+    }
+
+    main > section:nth-child(4) > div > h3 {
+      margin-left: 20px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 25px;
+      color: white;
+    }
+
+    main > section:first-child > h1 {
+      text-align: center;
+      font-size: 160px;
+      margin-top: 240px;
+    }
+
+    main > section:nth-child(2) > h1 {
+      text-align: center;
+      font-size: 160px;
+      margin-top: 240px;
+    }
+
+    main > section:nth-child(3) > h1 {
+      text-align: center;
+      font-size: 160px;
+      margin-top: 240px;
+    }
+
+    main > section:nth-child(4) > h1 {
+      text-align: center;
+      font-size: 160px;
+      margin-top: 240px;
+    }
+  </style>
 </head>
 <body>
-
 <main>
-
   <section>
-    <section>
-      <h4>Card 1</h4>
-    </section>
+    <div><h3>Card 1</h3></div>
     <h1>Hello</h1>
   </section>
-
   <section>
-    <section>
-      <h4>Card 2</h4>
-    </section>
+    <div><h3>Card 2</h3></div>
     <h1>How</h1>
   </section>
-
   <section>
-    <section>
-      <h4>Card 3</h4>
-    </section>
+    <div><h3>Card 3</h3></div>
     <h1>Are</h1>
   </section>
-
   <section>
-    <section>
-      <h4>Card 4</h4>
-    </section>
+    <div><h3>Card 4</h3></div>
     <h1>You..?</h1>
   </section>
-
-
 </main>
-
 </body>
 </html>
