--- a/assignments/css/case_06/case_06.html
+++ b/assignments/css/case_06/case_06.html
@@ -7,39 +7,82 @@
     <style>
 
     section{
-        width: 1200px;
-        height: 600px;
+        width: 100vw;
+        height: 100vh;
         display: grid;
         grid-template-rows: repeat(3,1fr);
         grid-template-columns: repeat(4,1fr);
+        gap: 9px;
+    }
+    section>div{
+        box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.68);
     }
 
     section>div:nth-child(1){
         grid-column: 1/3;
+        background:url("assets/img/naruto.jpg");
+        background-size: cover;
+        background-position: center;
     }
 
     section>div:nth-child(8){
         grid-column: 2/4;
         grid-row: 3/4;
+        background:url("assets/img/goku.jpg");
+        background-size: cover;
+        background-position: center;
     }
 
     section>div:nth-child(4){
         grid-column: 4/5;
         grid-row: 1/4;
+        background:url("assets/img/luffy.jpg");
+        background-size: cover;
+        background-position: center;
+    }
+
+    section>div:nth-child(3){
+        background:url("assets/img/Dragon-Ball.jpg");
+        background-size: cover;
+        background-position: center;
+    }
+
+    section>div:nth-child(2){
+        background:url("assets/img/one-piece-ts.jpg");
+        background-size: cover;
+        background-position: center;
+    }
+
+    section>div:nth-child(6){
+        background:url("assets/img/naruto 1.png");
+        background-size: cover;
+        background-position: center;
+    }
+
+    section>div:nth-child(7){
+        background:url("assets/img/naruto g.jpg");
+        background-size: cover;
+        background-position: center;
+    }
+
+    section>div:nth-child(5){
+        background:url("assets/img/one piece g.jpg");
+        background-size: cover;
+        background-position: center;
     }
 
 </style>
 </head>
 <body>
 <section> <!--Grid Container-->
-    <div style="background:#f00505"></div> <!--Grid Items-->
-    <div style="background:#0a7f1e"></div> <!--Grid Items-->
-    <div style="background:#900387"></div> <!--Grid Items-->
-    <div style="background:#ff740a"></div> <!--Grid Items-->
-    <div style="background:#f3429b"></div> <!--Grid Items-->
-    <div style="background:#0c2bf6"></div> <!--Grid Items-->
-    <div style="background:#823a03"></div> <!--Grid Items-->
-    <div style="background:#4b0368"></div> <!--Grid Items-->
+    <div></div> <!--Grid Items-->
+    <div></div> <!--Grid Items-->
+    <div></div> <!--Grid Items-->
+    <div></div> <!--Grid Items-->
+    <div></div> <!--Grid Items-->
+    <div></div> <!--Grid Items-->
+    <div></div> <!--Grid Items-->
+    <div></div> <!--Grid Items-->
 </section>
 </body>
 </html>
