--- a/assignments/css/case_05/case_05.html
+++ b/assignments/css/case_05/case_05.html
@@ -2,9 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Case 05</title>
+    <title>Case 5</title>
+    <style>
+
+        section{
+            width: 1200px;
+            height: 600px;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 50px;
+            margin: auto;
+            display: grid;
+            grid-template-rows: repeat(3,1fr);
+            grid-template-columns: repeat(4,1fr);
+            gap: 9px;
+        }
+        section>div{
+            background: url("assets/img/one-piece-ts.jpg");
+            background-size: cover;
+            background-position: center;
+            box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.68);
+        }
+
+    </style>
 </head>
 <body>
-
+<section>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</section>
 </body>
 </html>
