--- a/assignments/css/case_06/case_06.html
+++ b/assignments/css/case_06/case_06.html
@@ -6,9 +6,13 @@
 
     <style>
 
+        ::-webkit-scrollbar{
+            width: 0px;
+        }
+
     section{
-        width: 100vw;
-        height: 100vh;
+        width: 1200px;
+        height: 600px;
         display: grid;
         grid-template-rows: repeat(3,1fr);
         grid-template-columns: repeat(4,1fr);
