--- a/assignments/css/Animation/Case 04/case_04.html
+++ b/assignments/css/Animation/Case 04/case_04.html
@@ -2,9 +2,126 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Case 04 Vehicle Animation</title>
+    <title>Animation Case 04</title>
+
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <meta name="viewport" content="width=device-width initial-scale=1">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <style>
+        main {
+            width: 100%;
+            height: 100vh;
+            background-image: url("assets/img/sky.jpg");
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        main > section {
+            position: relative;
+            width: 100vw;
+            height: 100vh;
+        }
+
+        main > section > img {
+            width: 400px;
+            height: 200px;
+            position: absolute;
+            top: 380px;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            z-index: 3;
+        }
+
+        #wheels > img:nth-child(1) {
+            position: absolute;
+            top: 465px;
+            left: 233px;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            width: 70px;
+            height: 70px;
+            z-index: 4;
+        }
+
+        #wheels > img:nth-child(2) {
+            position: absolute;
+            top: 465px;
+            left: 0;
+            right: 256px;
+            bottom: 0;
+            margin: auto;
+            width: 70px;
+            height: 70px;
+            z-index: 4;
+        }
+
+        #wheels > img {
+            animation: wheel 2s infinite;
+        }
+
+        @keyframes wheel {
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        #road {
+            width: 500%;
+            height: 200px;
+            background-image: url("assets/img/road.jpg");
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 1;
+            background-repeat: repeat-x;
+            animation: road 5s linear infinite;
+        }
+
+        @keyframes road {
+            100% {
+                transform: translateX(-3400px);
+            }
+        }
+
+        #city {
+            width: 500%;
+            height: 200px;
+            background-image: url("assets/img/city.png");
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 200px;
+            z-index: 1;
+            background-repeat: repeat-x;
+            animation: city 20s linear infinite;
+        }
+
+        @keyframes city {
+            100% {
+                transform: translateX(-1400px);
+            }
+        }
+    </style>
 </head>
 <body>
+<main>
+    <div id="road"></div>
+    <div id="city"></div>
+
+    <section>
+        <img src="assets/img/car.png" alt="car">
+        <div id="wheels">
+            <img src="assets/img/wheel.png" alt="car">
+            <img src="assets/img/wheel.png" alt="car">
+        </div>
+    </section>
+</main>
 
 </body>
 </html>
