--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Kavindu Thiwanka">
     <meta name="owner" content="Kavindu Thiwanka">
     <meta name="theme-color" content="black">
-    <meta name="viewport" content="width=device-width initial-scale=1">
+<!--    <meta name="viewport" content="width=device-width initial-scale=1">-->
     <meta name="keyword" content="Kavindu Thiwanka,Kavindu thiwanka,kavindu thiwanka,Kavidu,Kavindu,Kavidu Thiwanka">
 
     <link rel="stylesheet" href="assets/css/fonts/css/all.css">
