--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
             height: 350px;
             width: 500px;
             border-radius: 20px;
+            background-size: cover;
         }
 
         main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 {
@@ -428,6 +429,7 @@
             height: 350px;
             width: 500px;
             border-radius: 20px;
+            background-size: cover;
         }
 
         main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 {
@@ -473,6 +475,7 @@
             height: 350px;
             width: 500px;
             border-radius: 20px;
+            background-size: cover;
         }
 
         main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 {
@@ -1600,10 +1603,10 @@
         <section>
             <div id="latest_project">
                 <aside>
-                    <img src="assets/portfolio/1.gif" alt="Logo">
+                    <img src="assets/portfolio/Car Animation Project.png" alt="Logo">
                 </aside>
                 <aside>
-                    <h1>Latest <span style="color: red">Project</span></h1>
+                    <h1>Car <span style="color: red">Animation</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                         optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                         repellendus tenetur totam, velit?</p>
