Project Details Added

--- a/index.html
+++ b/index.html
@@ -379,14 +379,14 @@
             padding-top: 20px;
         }
 
-        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > img {
+        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > a > img {
             height: 350px;
             width: 500px;
             border-radius: 20px;
             background-size: cover;
         }
 
-        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 {
+        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 > a{
             position: relative;
             font-size: 30px;
             color: white;
@@ -394,6 +394,7 @@
             margin-bottom: 30px;
             margin-left: 25px;
             margin-top: 40px;
+            text-decoration: none;
         }
 
         main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > p {
@@ -425,14 +426,14 @@
             padding-top: 20px;
         }
 
-        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > img {
+        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > a > img {
             height: 350px;
             width: 500px;
             border-radius: 20px;
             background-size: cover;
         }
 
-        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 {
+        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 > a {
             position: relative;
             font-size: 30px;
             color: white;
@@ -440,6 +441,7 @@
             margin-bottom: 30px;
             margin-left: 25px;
             margin-top: 40px;
+            text-decoration: none;
         }
 
         main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > p {
@@ -471,14 +473,14 @@
             padding-top: 20px;
         }
 
-        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > img {
+        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > a > img {
             height: 350px;
             width: 500px;
             border-radius: 20px;
             background-size: cover;
         }
 
-        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 {
+        main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 > a {
             position: relative;
             font-size: 30px;
             color: white;
@@ -486,6 +488,7 @@
             margin-bottom: 30px;
             margin-left: 25px;
             margin-top: 40px;
+            text-decoration: none;
         }
 
         main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > p {
@@ -1525,10 +1528,10 @@
         </div>
         <div>
             <aside>
-                <img src="assets/portfolio/1.gif" alt="Logo">
+                <img src="assets/portfolio/Car Animation Project.gif" alt="Logo">
             </aside>
             <aside>
-                <h1>My Latest Work</h1>
+                <h1>Car Animation Project</h1>
                 <h5>Details about Project</h5>
                 <br>
                 <br>
@@ -1603,10 +1606,10 @@
         <section>
             <div id="latest_project">
                 <aside>
-                    <img src="assets/portfolio/Car Animation Project.png" alt="Logo">
+                    <a href="assignments/css/Animation/Case 04/case_04.html" target="_blank"><img src="assets/portfolio/Car Animation Project.gif" alt="Logo"></a>
                 </aside>
                 <aside>
-                    <h1>Car <span style="color: red">Animation</span></h1>
+                    <h1><a href="assignments/css/Animation/Case 04/case_04.html" target="_blank">Car <span style="color: red">Animation</span></a></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                         optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                         repellendus tenetur totam, velit?</p>
@@ -1614,10 +1617,10 @@
             </div>
             <div>
                 <aside>
-                    <img src="assets/portfolio/1.gif" alt="Logo">
+                    <a href="assignments/css/Animation/Case 03/case_03.html" target="_blank"><img src="assets/portfolio/Slider Project.png" alt="Logo"></a>
                 </aside>
                 <aside>
-                    <h1>Another <span style="color: red">Project</span></h1>
+                    <h1><a href="assignments/css/Animation/Case 03/case_03.html" target="_blank">Image Slider using <span style="color: red">CSS animations</span></a></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                         optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                         repellendus tenetur totam, velit?</p>
@@ -1625,10 +1628,10 @@
             </div>
             <div>
                 <aside>
-                    <img src="assets/portfolio/1.gif" alt="Logo">
+                    <a href="assignments/css/Animation/Case 02/case_02.html" target="_blank"><img src="assets/portfolio/WATER DROP Project.gif" alt="Logo"></a>
                 </aside>
                 <aside>
-                    <h1>Another <span style="color: red">Project</span></h1>
+                    <h1><a href="assignments/css/Animation/Case 02/case_02.html" target="_blank">Water Drop <span style="color: red">Animation</span></a></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                         optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                         repellendus tenetur totam, velit?</p>
