potfolio responsive bug fixed

--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                 margin-right: 0px;
             }
 
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > a > img {
                 height: 170px;
                 width: 240px;
             }
@@ -790,7 +790,7 @@
                 padding-left: 2px;
                 padding-right: 2px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 > a  {
                 font-size: 28px;
                 margin-left: 0px;
             }
@@ -807,7 +807,7 @@
                 margin-right: 0px;
             }
 
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > a > img {
                 height: 170px;
                 width: 240px;
             }
@@ -827,7 +827,7 @@
                 padding-left: 2px;
                 padding-right: 2px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 > a  {
                 font-size: 28px;
                 margin-left: 0px;
             }
@@ -845,7 +845,7 @@
                 margin-right: 0px;
             }
 
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > a > img {
                 height: 170px;
                 width: 240px;
             }
@@ -865,7 +865,7 @@
                 padding-left: 2px;
                 padding-right: 2px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 > a  {
                 font-size: 28px;
                 margin-left: 0px;
             }
@@ -1027,7 +1027,7 @@
                 margin-right: 0px;
             }
 
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > a > img {
                 height: 170px;
                 width: 240px;
             }
@@ -1047,7 +1047,7 @@
                 padding-left: 2px;
                 padding-right: 2px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 > a  {
                 font-size: 28px;
                 margin-left: 0px;
             }
@@ -1064,7 +1064,7 @@
                 margin-right: 0px;
             }
 
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > a > img {
                 height: 170px;
                 width: 240px;
             }
@@ -1084,7 +1084,7 @@
                 padding-left: 2px;
                 padding-right: 2px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 > a  {
                 font-size: 28px;
                 margin-left: 0px;
             }
@@ -1102,7 +1102,7 @@
                 margin-right: 0px;
             }
 
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > a > img {
                 height: 170px;
                 width: 240px;
             }
@@ -1122,7 +1122,7 @@
                 padding-left: 2px;
                 padding-right: 2px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 > a  {
                 font-size: 28px;
                 margin-left: 0px;
             }
@@ -1282,7 +1282,7 @@
                 margin-right: 0px;
             }
 
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > a > img {
                 height: 170px;
                 width: 240px;
             }
@@ -1302,7 +1302,7 @@
                 padding-left: 2px;
                 padding-right: 2px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 > a  {
                 font-size: 28px;
                 margin-left: 0px;
             }
@@ -1319,7 +1319,7 @@
                 margin-right: 0px;
             }
 
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > a > img {
                 height: 170px;
                 width: 240px;
             }
@@ -1339,7 +1339,7 @@
                 padding-left: 2px;
                 padding-right: 2px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 > a  {
                 font-size: 28px;
                 margin-left: 0px;
             }
@@ -1357,7 +1357,7 @@
                 margin-right: 0px;
             }
 
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > a > img {
                 height: 170px;
                 width: 240px;
             }
@@ -1377,7 +1377,7 @@
                 padding-left: 2px;
                 padding-right: 2px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 > a  {
                 font-size: 28px;
                 margin-left: 0px;
             }
@@ -1465,15 +1465,15 @@
             main > section:nth-child(1) > div:nth-child(3) > aside:nth-child(2) > nav > h1 {
                 margin-top: 0;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > a > img {
                 height: 260px;
                 width: 360px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > a > img {
                 height: 260px;
                 width: 360px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > img {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > a > img {
                 height: 260px;
                 width: 360px;
             }
@@ -1486,15 +1486,15 @@
             main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside:nth-child(2) {
                 left: 360px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(1) > aside > h1 > a  {
                 font-size: 28px;
                 margin-top: -30px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(2) > aside > h1 > a  {
                 font-size: 28px;
                 margin-top: -30px;
             }
-            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 {
+            main > section:nth-child(4) > section:nth-child(3) > div:nth-child(3) > aside > h1 > a  {
                 font-size: 28px;
                 margin-top: -30px;
             }
