--- a/index.html
+++ b/index.html
@@ -1620,7 +1620,7 @@
                     <a href="assignments/css/Animation/Case 03/case_03.html" target="_blank"><img src="assets/portfolio/Slider Project.png" alt="Logo"></a>
                 </aside>
                 <aside>
-                    <h1><a href="assignments/css/Animation/Case 03/case_03.html" target="_blank">Image Slider using <span style="color: red">CSS animations</span></a></h1>
+                    <h1><a href="assignments/css/Animation/Case 03/case_03.html" target="_blank">Image Slider <span style="color: red">Animations</span></a></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                         optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                         repellendus tenetur totam, velit?</p>
